--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>rasta loader...</app-root>
+ <!-- <app-caissier></app-caissier>-->
 </body>
 </html>
